[project]
name = "deep-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "faiss-cpu>=1.11.0.post1",
    "fastmcp>=2.10.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-litellm>=0.2.2",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.3",
]
